# gambooza_case_study

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  README_ES.md  docker-compose.yml  notes.txt  pyproject.toml  requirements.txt  test_simple_detector.py
backend/: config.py  logging_config.py  main.py
backend/database/: connection.py  models.py  schemas.py
backend/ml/: common.py
backend/ml/approach_simple/: detector.py  filtering.py
backend/ml/approach_yolo/: detector.py  pipeline.py  relink.py  sam3_tracking.py  yolo_track.py
backend/routers/: counts.py  videos.py
backend/services/: processor.py
config/: botsort.yaml  pipeline.yaml  pipeline1.yaml  pipeline3.yaml  pipeline4.yaml  pipeline5.yaml  pipeline6.yaml  pipeline7.yaml
data/db_files/: app.db
frontend/: app.py  requirements.txt
frontend/utils/: api_client.py
notebooks/: 01_explore.py  01_exploreTABS.py  02_exploreYOLO.py  03_YOLO_track.py  04_relink_tracks.py  05_relink_coexistence.py  06_YOLOE_seg_track.py  common.py  pipeline.py  res3.ipynb  res3.py  sam3_tracking.py  tune.py
notebooks/runs/detect/train/: args.yaml
results/YOLOE_seg/cerveza2_track/: sam2_tap_seg.py  sam2_video_track.py  sam3_semantic_test.py
results/cerveza2/: summary.json  tap_roi.json
scripts/: run_simple.py  run_yolo_on_clips.py  run_yolo_pipeline.py
tests/: test_api_client.py  test_app.py  test_counts_router.py  test_database.py  test_filtering.py  test_processor.py  test_schemas.py  test_videos_router.py
